--- a/report/report.tex
+++ b/report/report.tex
@@ -6,6 +6,7 @@
 \usepackage{multirow}
 \usepackage[top=4cm,bottom=4cm,left=4cm,right=4cm]{geometry}
 \usepackage[justification=centering]{caption}
+\usepackage[colorlinks,bookmarksopen,bookmarksnumbered,citecolor=green, linkcolor=red, urlcolor=green]{hyperref}
 
 
 
@@ -14,6 +15,7 @@
 
 \begin{document}
 \maketitle
+\href{https://github.com/LinearAlgebraX/DeepLearningRobotic_cwk}{The github repo for this cwk}
 
 \section{Literature review}
 Deep learning models are of great significance in the field of robotics, allowing robots to learn complex operating tasks based on raw sensory data.\\
